# canary-voice-tune

./: .gitignore  CMakeLists.txt  README.md  package.json
.claude/: settings.json
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/: ClassicPitchShifter.cpp  ClassicPitchShifter.h  ModernPitchShifter.cpp  ModernPitchShifter.h  NoteSelector.cpp  NoteSelector.h  PitchDetector.cpp  PitchDetector.h  PitchShifter.cpp  PitchShifter.h  PitchShifterBase.h  VocalEffectsProcessor.cpp  VocalEffectsProcessor.h
Source/UI/: PianoKeyboard.cpp  PianoKeyboard.h  RotaryKnob.cpp  RotaryKnob.h  TuningModeSelector.h
test/: TestHelpers.h  TestRunner.cpp  Test_19Notes.cpp  Test_BreathGate.cpp  Test_ClassicClick.cpp  Test_ClassicClick.h  Test_Exciter.cpp  Test_HighlightOctave.cpp  Test_LongMelody.cpp  Test_NoteMapping.cpp  Test_NoteMapping.h  Test_NoteSelector.cpp  Test_OctaveJump.cpp  Test_OctaveJump.h  Tests.cpp
test/cpp/: TestHelpers.cpp  TestRunner.cpp  Test_19Notes.cpp  Test_19Notes.h  Test_BreathGate.cpp  Test_BreathGate.h  Test_ClassicClick.cpp  Test_Exciter.cpp  Test_Exciter.h  Test_HighlightOctave.cpp  Test_HighlightOctave.h  Test_LongMelody.cpp  Test_LongMelody.h  Test_NoteMapping.cpp  Test_NoteSelector.cpp  Test_NoteSelector.h  Test_OctaveJump.cpp  TuneRender.h
test/python/: benchmark_detectors.py  diagnose_pipeline.py  run_all.py  test_breath_gate.py  test_classic_click.py  test_exciter.py  test_long_melody.py  test_melody_accuracy.py  test_octave_jump.py  utils.py
test/samples/: mapping.json
